@@ -60,6 +60,22 @@ name|common
 operator|.
 name|params
 operator|.
+name|CommonParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
 name|FacetParams
 import|;
 end_import
@@ -578,7 +594,9 @@ name|params
 operator|.
 name|remove
 argument_list|(
-literal|"start"
+name|CommonParams
+operator|.
+name|START
 argument_list|)
 expr_stmt|;
 name|refine
@@ -587,7 +605,9 @@ name|params
 operator|.
 name|set
 argument_list|(
-literal|"rows"
+name|CommonParams
+operator|.
+name|ROWS
 argument_list|,
 literal|"0"
 argument_list|)
