@@ -188,6 +188,22 @@ name|common
 operator|.
 name|params
 operator|.
+name|ShardParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
 name|SolrParams
 import|;
 end_import
@@ -559,16 +575,6 @@ argument_list|()
 operator|.
 name|getParams
 argument_list|(
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|common
-operator|.
-name|params
-operator|.
 name|CommonParams
 operator|.
 name|FQ
@@ -703,7 +709,9 @@ name|params
 operator|.
 name|get
 argument_list|(
-literal|"shards"
+name|ShardParams
+operator|.
+name|SHARDS
 argument_list|)
 decl_stmt|;
 if|if
@@ -805,7 +813,9 @@ name|params
 operator|.
 name|get
 argument_list|(
-literal|"ids"
+name|ShardParams
+operator|.
+name|IDS
 argument_list|)
 decl_stmt|;
 if|if
@@ -1630,7 +1640,9 @@ argument_list|()
 operator|.
 name|getBool
 argument_list|(
-literal|"isShard"
+name|ShardParams
+operator|.
+name|IS_SHARD
 argument_list|,
 literal|false
 argument_list|)
@@ -2026,7 +2038,9 @@ name|params
 operator|.
 name|remove
 argument_list|(
-literal|"shards"
+name|ShardParams
+operator|.
+name|SHARDS
 argument_list|)
 expr_stmt|;
 comment|// set the start (offset) to 0 for each shard request so we can properly merge
@@ -2037,7 +2051,9 @@ name|params
 operator|.
 name|set
 argument_list|(
-literal|"start"
+name|CommonParams
+operator|.
+name|START
 argument_list|,
 literal|"0"
 argument_list|)
@@ -2052,7 +2068,9 @@ name|params
 operator|.
 name|set
 argument_list|(
-literal|"rows"
+name|CommonParams
+operator|.
+name|ROWS
 argument_list|,
 name|rb
 operator|.
@@ -2103,7 +2121,9 @@ name|params
 operator|.
 name|set
 argument_list|(
-literal|"fl"
+name|CommonParams
+operator|.
+name|FL
 argument_list|,
 name|rb
 operator|.
@@ -2130,7 +2150,9 @@ name|params
 operator|.
 name|set
 argument_list|(
-literal|"fl"
+name|CommonParams
+operator|.
+name|FL
 argument_list|,
 name|rb
 operator|.
@@ -2906,7 +2928,9 @@ name|params
 operator|.
 name|remove
 argument_list|(
-literal|"sort"
+name|CommonParams
+operator|.
+name|SORT
 argument_list|)
 expr_stmt|;
 comment|// we already have the field sort values
@@ -2931,7 +2955,9 @@ name|params
 operator|.
 name|get
 argument_list|(
-literal|"fl"
+name|CommonParams
+operator|.
+name|FL
 argument_list|)
 decl_stmt|;
 if|if
@@ -2947,7 +2973,9 @@ name|params
 operator|.
 name|set
 argument_list|(
-literal|"fl"
+name|CommonParams
+operator|.
+name|FL
 argument_list|,
 name|fl
 operator|+
@@ -3006,7 +3034,9 @@ name|params
 operator|.
 name|add
 argument_list|(
-literal|"ids"
+name|ShardParams
+operator|.
+name|IDS
 argument_list|,
 name|StrUtils
 operator|.
