@@ -122,6 +122,22 @@ name|solr
 operator|.
 name|common
 operator|.
+name|params
+operator|.
+name|ShardParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|SolrException
 import|;
 end_import
@@ -1234,7 +1250,9 @@ name|params
 operator|.
 name|remove
 argument_list|(
-literal|"shards"
+name|ShardParams
+operator|.
+name|SHARDS
 argument_list|)
 expr_stmt|;
 comment|// not a top-level request
@@ -1249,14 +1267,18 @@ name|params
 operator|.
 name|remove
 argument_list|(
-literal|"echoParams"
+name|CommonParams
+operator|.
+name|HEADER_ECHO_PARAMS
 argument_list|)
 expr_stmt|;
 name|params
 operator|.
 name|set
 argument_list|(
-literal|"isShard"
+name|ShardParams
+operator|.
+name|IS_SHARD
 argument_list|,
 literal|true
 argument_list|)
@@ -1272,7 +1294,9 @@ argument_list|()
 operator|.
 name|get
 argument_list|(
-literal|"shards.qt"
+name|ShardParams
+operator|.
+name|SHARDS_QT
 argument_list|)
 decl_stmt|;
 if|if
@@ -1286,7 +1310,9 @@ name|params
 operator|.
 name|remove
 argument_list|(
-literal|"qt"
+name|CommonParams
+operator|.
+name|QT
 argument_list|)
 expr_stmt|;
 block|}
@@ -1296,7 +1322,9 @@ name|params
 operator|.
 name|set
 argument_list|(
-literal|"qt"
+name|CommonParams
+operator|.
+name|QT
 argument_list|,
 name|shardHandler
 argument_list|)
@@ -1832,7 +1860,9 @@ name|params
 operator|.
 name|remove
 argument_list|(
-literal|"wt"
+name|CommonParams
+operator|.
+name|WT
 argument_list|)
 expr_stmt|;
 comment|// use default (or should we explicitly set it?)
@@ -1840,7 +1870,9 @@ name|params
 operator|.
 name|remove
 argument_list|(
-literal|"version"
+name|CommonParams
+operator|.
+name|VERSION
 argument_list|)
 expr_stmt|;
 name|SolrServer
